--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -35,6 +35,8 @@
   flex-direction: column;
   justify-content: center;
   height: 150px;
+  width: calc(100% / 3);
+  border: 1px solid grey;
 }
 .label {
   margin-bottom: 10px;
