--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -24,3 +24,15 @@
   font-size: 50px;
   font-weight: 700;
 }
+
+.item {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  border-radius: 10px;
+  border: 2px solid gray;
+  box-shadow: 5px 5px 5px grey;
+  margin-bottom: 20px;
+  align-items: center;
+  padding-left: 20px;
+}
